--- a/app/src/main/res/layout/keyboard_layout.xml
+++ b/app/src/main/res/layout/keyboard_layout.xml
@@ -147,9 +147,13 @@
 
         <Button
             android:id="@+id/btnUp"
-            style="@style/buttonTheme"
+            style="@style/buttonSpecialTheme"
             android:layout_weight="1.5"
-            android:text="UP" />
+            android:drawableStart="@drawable/up_arrow"
+            android:gravity="center"
+            android:paddingStart="13.5dp"
+            android:paddingEnd="0dp"
+            android:text="" />
 
         <Button
             android:id="@+id/btnz"
@@ -195,9 +199,14 @@
 
         <Button
             android:id="@+id/btnDelete"
-            style="@style/buttonTheme"
+            style="@style/buttonSpecialTheme"
             android:layout_weight="1.5"
-            android:text="Back" />
+            android:drawableStart="@drawable/delete_icon"
+            android:gravity="center"
+            android:paddingStart="9dp"
+            android:paddingEnd="0dp"
+            android:text="" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -210,13 +219,13 @@
 
         <Button
             android:id="@+id/btnNumbers"
-            style="@style/buttonTheme"
+            style="@style/buttonSpecialTheme"
             android:layout_weight="1"
             android:text="123" />
 
         <Button
             android:id="@+id/btnVoiceInput"
-            style="@style/buttonTheme"
+            style="@style/buttonSpecialTheme"
             android:layout_weight="1"
             android:text="Micro" />
 
@@ -228,7 +237,7 @@
 
         <Button
             android:id="@+id/btnSpace"
-            style="@style/buttonTheme"
+            style="@style/buttonSpecialTheme"
             android:layout_weight="4.5"
             android:text="&lt; English &gt;" />
 
@@ -240,13 +249,14 @@
 
         <Button
             android:id="@+id/btnEnter"
-            style="@style/buttonTheme"
+            style="@style/buttonSpecialTheme"
             android:layout_weight="1.5"
             android:text="Enter" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:orientation="horizontal"></LinearLayout>
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="64dp"-->
+<!--        android:orientation="horizontal">-->
+<!--    </LinearLayout>-->
 </LinearLayout>
