--- a/app/src/main/res/layout/keyboard_numbers_layout.xml
+++ b/app/src/main/res/layout/keyboard_numbers_layout.xml
@@ -153,7 +153,7 @@
 
         <Button
             android:id="@+id/btnSpecialCharacters"
-            style="@style/buttonTheme"
+            style="@style/buttonSpecialTheme"
             android:layout_weight="1.5"
             android:text="#+=" />
 
@@ -188,10 +188,14 @@
             android:text="'" />
 
         <Button
-            android:id="@id/btnDelete"
-            style="@style/buttonTheme"
+            android:id="@+id/btnDelete"
+            style="@style/buttonSpecialTheme"
             android:layout_weight="1.5"
-            android:text="Back" />
+            android:drawableStart="@drawable/delete_icon"
+            android:gravity="center"
+            android:paddingStart="18dp"
+            android:paddingEnd="0dp"
+            android:text="" />
     </LinearLayout>
 
     <LinearLayout
@@ -204,31 +208,32 @@
 
         <Button
             android:id="@+id/btnBaseKeyboard"
-            style="@style/buttonTheme"
+            style="@style/buttonSpecialTheme"
             android:layout_weight="1"
             android:text="ABC" />
 
         <Button
             android:id="@+id/btnVoiceInput"
-            style="@style/buttonTheme"
+            style="@style/buttonSpecialTheme"
             android:layout_weight="1"
             android:text="Micro" />
 
         <Button
             android:id="@+id/btnSpace"
-            style="@style/buttonTheme"
+            style="@style/buttonSpecialTheme"
             android:layout_weight="4.5"
-            android:text="Space" />
+            android:text="&lt; English &gt;" />
 
         <Button
             android:id="@+id/btnEnter"
-            style="@style/buttonTheme"
+            style="@style/buttonSpecialTheme"
             android:layout_weight="2"
             android:text="Enter" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:orientation="horizontal"></LinearLayout>
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="64dp"-->
+<!--        android:orientation="horizontal">-->
+<!--    </LinearLayout>-->
 </LinearLayout>
