--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,11 +14,11 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
-    <style name="buttonPressTheme" parent="Widget.AppCompat.Button">
+    <style name="buttonSpecialTheme" parent="Widget.AppCompat.Button">
         <item name="android:layout_margin">2dp</item>
         <item name="android:background">@drawable/button_press</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textAllCaps">true</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 </resources>
