--- a/app/src/main/res/layout/keyboard_numbers_layout.xml
+++ b/app/src/main/res/layout/keyboard_numbers_layout.xml
@@ -200,15 +200,13 @@
             android:layout_weight="1"
             android:text="'" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btnDelete"
             style="@style/buttonSpecialTheme"
             android:layout_weight="1.5"
-            android:drawableStart="@drawable/delete_icon"
-            android:gravity="center"
-            android:paddingStart="12dp"
-            android:paddingEnd="0dp"
-            android:text="" />
+            android:src="@drawable/delete_icon"
+            android:scaleType="centerInside"
+            android:contentDescription="delete" />
     </LinearLayout>
 
     <LinearLayout
@@ -225,11 +223,15 @@
             android:layout_weight="1"
             android:text="ABC" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btnVoiceInput"
             style="@style/buttonSpecialTheme"
+            android:layout_height="48dp"
             android:layout_weight="1"
-            android:text="Micro" />
+            android:contentDescription="Microphone"
+            android:scaleType="centerInside"
+            android:padding="7dp"
+            android:src="@drawable/microphone_black_shape" />
 
         <Button
             android:id="@+id/btnSpace"
