--- a/app/src/main/res/layout/keyboard_ru_layout.xml
+++ b/app/src/main/res/layout/keyboard_ru_layout.xml
@@ -176,15 +176,13 @@
         android:orientation="horizontal"
         android:weightSum="11">
 
-        <Button
+        <ImageButton
             android:id="@+id/btnUp"
             style="@style/buttonSpecialTheme"
             android:layout_weight="1"
-            android:drawableStart="@drawable/up_arrow"
-            android:gravity="center"
-            android:paddingStart="-1dp"
-            android:paddingEnd="0dp"
-            android:text="" />
+            android:src="@drawable/up_arrow"
+            android:scaleType="centerInside"
+            android:contentDescription="delete" />
 
         <Button
             android:id="@+id/btnя"
@@ -240,15 +238,13 @@
             android:layout_weight="1"
             android:text="ю" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btnDelete"
             style="@style/buttonSpecialTheme"
             android:layout_weight="1"
-            android:drawableStart="@drawable/delete_icon_for_russian"
-            android:gravity="center"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp"
-            android:text="" />
+            android:src="@drawable/delete_icon_for_russian"
+            android:scaleType="centerInside"
+            android:contentDescription="delete" />
     </LinearLayout>
 
     <LinearLayout
@@ -265,11 +261,15 @@
             android:layout_weight="1"
             android:text="123" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btnVoiceInput"
             style="@style/buttonSpecialTheme"
+            android:layout_height="48dp"
             android:layout_weight="1"
-            android:text="Микрофон" />
+            android:contentDescription="Microphone"
+            android:scaleType="centerInside"
+            android:padding="7dp"
+            android:src="@drawable/microphone_black_shape" />
 
         <Button
             android:id="@+id/btnComma"
